--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,25 +3,36 @@
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  --black: #000000;
+  --white: #ffffff;
+
+  --black-hsl: 0, 0%, 0%;
+  --white-hsl: 0, 0%, 100%;
+
+  --pageBG: #FFFFFF;
+  --pageText: #000000;
+
+  --faded: #e2e2e2;
+
+  --pageBG-hsl: 0, 0%, 100%;
+  --pageText-hsl: 0, 0%, 0%;
+
+  --app-height: 100vh;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+    --pageBG: #000000;
+    --pageText: #fff6e2;
+
+    --faded: #fff6e297;
+
+    --pageBG-hsl: 0, 0%, 0%;
+    --pageText-hsl: 60, 14%, 95%;
   }
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  color: var(--pageText);
+  background: var(--pageBG);
 }
